# test

./: a.txt  gaofeng.txt
checksum/: CMakeLists.txt  filecomdeal.cpp  main.cpp
checksum/account/: CMakeLists.txt  account.cpp
checksum/checksum/: CMakeLists.txt  checksum.cpp  crc32.cpp  md5.cpp
checksum/include/: account.h  checksum.h  crc32.h  filecomdeal.h  md5.h
client/: CMakeLists.txt  bigfiledeal.cpp  client.cpp  common.cpp  main.cpp
client/include/: bigfiledeal.h  client.h  common.h
libbcrypt/: LICENSE
libbcrypt/src/: a.out
myrsa/: a.out  rsa.cpp
server/: .COUNTMAG  CMakeLists.txt  bigfileeadl.cpp  command.cpp  common.cpp  main.cpp  server.cpp
server/include/: bigfiledeal.h  command.h  common.h  server.h
