cmake_minimum_required(VERSION 2.8)
project(client)
include_directories(/home/gaofeng/gaofeng/client/include)
AUX_SOURCE_DIRECTORY(. TOP_SRCS)
add_definitions("-Wall -g")
IF(CMAKE_BUILD_TYPE STREQUAL Debug)
    ADD_DEFINITIONS(-DDEBUG)                            
ENDIF()
add_executable(client.out ${TOP_SRCS})
target_link_libraries(client.out pthread)
